Refactor Swagger UI integration to support multiple URLs.
Updated the Swagger UI component to handle multiple API URLs using a list instead of a concatenated string. Adjusted associated Java, XML, and properties files for consistency and improved code clarity. Added necessary adjustments to resources and dependencies.

--- a/swagger-ui/src/main/resources/de/bytestore/swaggerui/messages.properties
+++ b/swagger-ui/src/main/resources/de/bytestore/swaggerui/messages.properties
@@ -1,5 +1,3 @@
 localeDisplayName.en=English
-
 de.bytestore.swaggerui.view.apidocs/apiDocs.title=Api docs
-
-de.bytestore.swaggerui/menu.addon=Swagger-ui
+de.bytestore.swaggerui/menu.addon=Swagger UI
