Add new configuration options for Swagger UI customization
Introduced multiple configurable properties for Swagger UI, including `docExpansion`, `deepLinking`, `tryItOutEnabled`, `syntaxHighlight`, `useUnsafeMarkdown`, and `requestSnippetsEnabled`. Added a new enum `DocExpansion` to handle document expansion modes. These changes enhance flexibility and improve customization capabilities for the Swagger UI component.

--- a/swagger-ui/src/main/resources/de/bytestore/swaggerui/messages.properties
+++ b/swagger-ui/src/main/resources/de/bytestore/swaggerui/messages.properties
@@ -1,3 +1,9 @@
 localeDisplayName.en=English
+
+de.bytestore.swaggerui.components.swagger/DocExpansion=Doc expansion
+de.bytestore.swaggerui.components.swagger/DocExpansion.FULL=Full
+de.bytestore.swaggerui.components.swagger/DocExpansion.LIST=List
+de.bytestore.swaggerui.components.swagger/DocExpansion.NONE=None
+
 de.bytestore.swaggerui.view.apidocs/apiDocs.title=Api docs
 de.bytestore.swaggerui/menu.addon=Swagger UI
